2017-06-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (mbprintf5): Skip this test on Cygwin.

2017-06-22         Arnold D. Robbins     <arnold@skeeve.com>

	* profile4.ok, profile5.ok, profile7.ok: Updated after code changes.
	* profile7.awk: Added two more statements.

2017-06-18         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (mbprintf5): New test.
	* mbprintf5.awk, mbprintf5.in, mbprintf5.ok: New files.

2017-05-30         Arnold D. Robbins     <arnold@skeeve.com>

	* sourceplit.ok: Revise to match changed code.

2017-05-24         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* fwtest8.ok: Fix field number in error message, thanks to a bug
	report from Michal Jaegermann.

2017-05-23         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (fwtest5, fwtest6, fwtest7, fwtest8): New tests.
	* fwtest5.awk, fwtest5.in, fwtest5.ok, fwtest6.awk, fwtest6.in,
	fwtest6.ok, fwtest7.awk, fwtest7.in, fwtest7.ok, fwtest8.awk,
	fwtest8.in, fwtest8.ok: New files.

2017-05-20         Arnold D. Robbins     <arnold@skeeve.com>

	* noeffect.awk, noeffect.ok: Updated after code change.

2017-05-01         Aharon Robbins       <aharon.robbins@intel.com>

	* Makefile.am (sourcesplit): New test.
	* sourcesplit.ok: New file.
	Thanks to Hermann Peifer for the report.

	Unrelated:

	* Makefile.am (charset-msg-start): Document that having
	el_GR.iso88597 is helpful.

2017-04-12         Manuel Collado        <m-collado@users.sourceforge.net>

	* Makefile.am (fpat6): New test.
	* fpat6.awk, fpat6.in, fpat6.ok: New files.
	Check for the bug reported by Ed Morton in the bug-gawk mailing list.
	* patsplit.ok: Updated to the new patsplit behavior.

2017-04-12         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (memleak): New test.
	* memleak.awk, memleak.ok: New files.

2017-03-27         Arnold D. Robbins     <arnold@skeeve.com>

	* fwtest4: Renamed from fwtest3.
	* fwtest3: Renamed from fwtest2b.